--- a/style/style.css
+++ b/style/style.css
@@ -18,7 +18,7 @@ h3 {
     font-weight: 800;
 }
 
-button {
+.download-resume {
     color: #0D1321;
     font-size: 20px;
     font-weight: 600;
@@ -85,4 +85,94 @@ nav {
     padding: 21px 24px 21px 24px;
     border-radius: 8px;
     background-color: #0D1321;
+}
+
+/* Web development section style */
+.web-section {
+    border: 1px solid red;
+    margin-bottom: 88px;
+
+}
+
+.web-container {
+    width: 1140px;
+    height: 1395px;
+    border: 2px solid red;
+    /* background-color: #0D132105; */
+    margin: 0 auto;
+    margin-top: 74px;
+    margin-bottom: 88px;
+    /* padding: 80px 97px 80px 97px; */
+    /* background-color: #0D1321; */
+
+}
+
+.web-heading {
+    width: 946px;
+    height: 1235px;
+    border: 2px solid red;
+    margin: 0 auto;
+    margin-top: 80px;
+}
+
+.web-heading-1 {
+    text-align: center;
+}
+
+.why-webdevelopment {
+    font-size: 32px;
+    font-weight: 800;
+    margin-bottom: 24px;
+}
+
+.why-webdevelopment-description {
+    font-size: 16px;
+    font-weight: 400;
+    margin-bottom: 48px;
+}
+
+.section-1 {
+    width: 946px;
+    height: 336px;
+    border: 2px solid green;
+    display: flex;
+}
+
+/* Inspiration section style */
+
+.inspiration-section {
+    width: 1140px;
+    height: 775px;
+    margin: 0 auto;
+    /* border: 1px solid yellow; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.inspiration-title {
+    font-size: 32px;
+    font-weight: 800;
+    margin-bottom: 24px;
+}
+
+.inspitation-description {
+    font-size: 16px;
+    font-weight: 400;
+    margin-bottom: 80px;
+}
+
+.inspiration-heading {
+    text-align: center;
+}
+
+.video-section {
+    width: 1140px;
+    height: 614px;
+    border: 2px solid #0D132133;
+    border-radius: 16PX;
+}
+.youtube-video{
+    padding: 32px;
 }
